<resources>
    <string name="app_name">ExpenseManager</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_up_your_budget">Set up Your Profile</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="continue_">Continue</string>
    <string name="favorite">Favourite</string>
    <string name="content_description_favorite">Favourite Sescription</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search Description</string>
    <string name="more">More</string>
    <string name="content_description_more">More Description</string>
    <string name="expenses">Expenses</string>
    <string name="all">All</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="calender">Calender</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="july">July</string>
    <string name="september">September</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="august">August</string>
    <string name="october">October</string>
    <string name="select_month">Select Month</string>
    <string name="ok">Ok</string>
    <string name="credit_35000_00">Credit 35000.00</string>
    <string name="card_">CARD : %1$s</string>
    <string name="upi_">UPI : %1$s</string>
    <string name="net_balance">Net Balance</string>
    <string name="_35000_00">35000.00</string>
    <string name="upcoming_transaction">Upcoming Transaction</string>
    <string name="remind_me">Remind Me</string>
    <string name="view_all">View All</string>
    <string name="total_expense">Total Expense</string>
    <string name="total_income">Total Income</string>
    <string name="_23_june_2012">23 June 2012</string>
    <string name="cash">Cash</string>
    <string name="others_">Others : %1$s</string>
    <string name="card">Card</string>
    <string name="concatinate_time">%1$s  :  %2$s</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="budget_exceed">\u0020 BUDGET EXCEED</string>
    <string name="june">June</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="amount">Amount</string>
    <string name="select_date">Select Date</string>
    <string name="recurring_transaction">Recurring Transaction</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="select_category">Select Category</string>
    <string name="select_transaction_type">Select Transaction Type</string>
    <string name="select_transaction_method">Select Transaction Method</string>
    <string name="saved">Transaction Saved</string>
    <string name="back">Back</string>
    <string name="duration">Select Duration</string>
    <string name="one_day">One Day</string>
    <string name="one_week">One Week</string>
    <string name="two_month">Two Month</string>
    <string name="six_month">Six Month</string>
    <string name="one_month">One Month</string>
    <string name="please_enter_valid">End Date Should be Greater than Start Date</string>
    <string name="mandatory">All fields are Mandatory</string>
    <string name="all_transactions">All Transactions</string>
    <string name="amount_saved">Amount Saved</string>
    <string name="amount_spent">Amount Spent</string>
    <string name="date_exception">Please Enter Date in Proper Format</string>
    <string name="one_year">One Year</string>
    <string name="under_development">Under Development</string>
    <string name="not_learned">"As this Feature Requires Service that's why didn't implemented it "</string>
</resources>