<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AllCategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            style="@style/roundedCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/net_balance"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/net_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_35000_00"
                        android:textColor="@color/custom_blue"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/card_net_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/upi_"
                        android:textColor="#AEEA00"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/upi_net_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_"
                        android:textColor="#5E039BE5"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/others_net_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit_35000_00"
                        android:textColor="#28D50000"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

<!--                    Pie chart to display the data-->

                    <org.eazegraph.lib.charts.PieChart
                        android:id="@+id/piechart"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/upcoming_tran"
            style="@style/roundedCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/recent_transaction"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/transaction_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/transaction_recycler_view_list">

                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/remind_me"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/remind_me"
                        app:icon="@drawable/ic_alarm_bell_svgrepo_com" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/view_all_transaction"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/view_all"
                        app:icon="@drawable/ic_baseline_arrow_forward_24"
                        app:iconGravity="end" />

                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/monthly_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>