<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CalenderFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar_calender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar_calc"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            app:title="@string/calender"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_24" >

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_month"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                app:icon="@drawable/ic_arrow_back_24" />

            <TextView
                android:id="@+id/month_year_tv"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forward_month"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                app:icon="@drawable/ic_baseline_arrow_forward_24"
                app:iconGravity="end" />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thur"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
    </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendar_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>






    </LinearLayout>





    <!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"-->
<!--        android:orientation="vertical">-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingTop="5dp"-->
<!--            android:paddingBottom="5dp"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/sun"-->
<!--                android:background="@drawable/black_border"-->
<!--                android:textColor="@color/gray"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="16sp"/>-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/mon"-->
<!--                android:textColor="@color/gray"-->
<!--                android:background="@drawable/black_border"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="16sp"/>-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/tue"-->
<!--                android:background="@drawable/black_border"-->
<!--                android:textColor="@color/gray"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="16sp"/>-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/black_border"-->
<!--                android:text="@string/wed"-->
<!--                android:textColor="@color/gray"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="16sp"/>-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/thur"-->
<!--                android:background="@drawable/black_border"-->
<!--                android:textColor="@color/gray"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="16sp"/>-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/black_border"-->
<!--                android:text="@string/fri"-->
<!--                android:textColor="@color/gray"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="16sp"/>-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/sat"-->
<!--                android:background="@drawable/black_border"-->
<!--                android:textColor="@color/gray"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="16sp"/>-->
<!--        </LinearLayout>-->
<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/calendar_recyclerView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            tools:itemCount="7" />-->
<!--    </LinearLayout>-->






</androidx.coordinatorlayout.widget.CoordinatorLayout>